install/operator/pkg/syndesis/backup/testdata/latest/666/resources/deployment-syndesis-meta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2020-01-30T20:28:07Z"
  generation: 1
  labels:
    app: syndesis
    owner: 05c92d60-439f-11ea-ab61-52fdfc072182
    syndesis.io/app: syndesis
    syndesis.io/component: syndesis-meta
    syndesis.io/type: infrastructure
  name: syndesis-meta
  namespace: syndesis
  ownerReferences:
  - apiVersion: syndesis.io/v1beta2
    blockOwnerDeletion: true
    controller: true
    kind: Syndesis
    name: app
    uid: 05c92d60-439f-11ea-ab61-52fdfc072182
  resourceVersion: "110292"
  selfLink: /apis/apps.openshift.io/v1/namespaces/syndesis/deploymentconfigs/syndesis-meta
  uid: 063fab63-439f-11ea-851f-0a580a80010d
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: syndesis
      syndesis.io/app: syndesis
      syndesis.io/component: syndesis-meta
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources:
      limits:
        memory: 256Mi
      requests:
        memory: 20Mi
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: syndesis
        syndesis.io/app: syndesis
        syndesis.io/component: syndesis-meta
        syndesis.io/type: infrastructure
    spec:
      containers:
      - env:
        - name: JAVA_APP_DIR
          value: /deployments
        - name: LOADER_HOME
          value: /deployments/ext
        - name: JAVA_OPTIONS
          value: -Djava.net.preferIPv4Stack=true -Duser.home=/tmp
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/syndesis/syndesis-meta:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: syndesis-meta
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8181
          name: metrics
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 280Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /deployments/config
          name: config-volume
        - mountPath: /deployments/ext
          name: ext-volume
        workingDir: /deployments
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: syndesis-server
      serviceAccountName: syndesis-server
      terminationGracePeriodSeconds: 30
      volumes:
      - name: ext-volume
        persistentVolumeClaim:
          claimName: syndesis-meta
      - configMap:
          defaultMode: 420
          name: syndesis-meta-config
        name: config-volume
  test: false
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-01-30T20:28:41Z"
    lastUpdateTime: "2020-01-30T20:28:41Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2020-01-30T20:28:15Z"
    lastUpdateTime: "2020-01-30T20:28:42Z"
    message: replication controller "syndesis-meta-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
