install/operator/pkg/syndesis/backup/testdata/latest/666/resources/deployment-syndesis-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2020-01-30T20:28:07Z"
  generation: 1
  labels:
    app: syndesis
    owner: 05c92d60-439f-11ea-ab61-52fdfc072182
    syndesis.io/app: syndesis
    syndesis.io/component: syndesis-ui
    syndesis.io/type: infrastructure
  name: syndesis-ui
  namespace: syndesis
  ownerReferences:
  - apiVersion: syndesis.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Syndesis
    name: app
    uid: 05c92d60-439f-11ea-ab61-52fdfc072182
  resourceVersion: "110256"
  selfLink: /apis/apps.openshift.io/v1/namespaces/syndesis/deploymentconfigs/syndesis-ui
  uid: 06345332-439f-11ea-851f-0a580a80010d
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: syndesis
      syndesis.io/app: syndesis
      syndesis.io/component: syndesis-ui
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        memory: 256Mi
      requests:
        memory: 20Mi
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: syndesis
        syndesis.io/app: syndesis
        syndesis.io/component: syndesis-ui
        syndesis.io/type: infrastructure
    spec:
      containers:
      - env:
        - name: DEV_SUPPORT
          value: "false"
        image: docker.io/syndesis/syndesis-ui:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: syndesis-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 255Mi
          requests:
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/config
          name: config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: syndesis-default
      serviceAccountName: syndesis-default
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: syndesis-ui-config
        name: config-volume
  test: false
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-01-30T20:28:33Z"
    lastUpdateTime: "2020-01-30T20:28:33Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2020-01-30T20:28:34Z"
    lastUpdateTime: "2020-01-30T20:28:34Z"
    message: replication controller "syndesis-ui-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
