install/operator/pkg/syndesis/backup/testdata/latest/666/resources/service-syndesis-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-01-30T20:28:08Z"
  labels:
    app: syndesis
    owner: 05c92d60-439f-11ea-ab61-52fdfc072182
    syndesis.io/app: syndesis
    syndesis.io/component: syndesis-prometheus
    syndesis.io/type: infrastructure
  name: syndesis-prometheus
  namespace: syndesis
  ownerReferences:
  - apiVersion: syndesis.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Syndesis
    name: app
    uid: 05c92d60-439f-11ea-ab61-52fdfc072182
  resourceVersion: "110005"
  selfLink: /api/v1/namespaces/syndesis/services/syndesis-prometheus
  uid: 06bf4f30-439f-11ea-ab61-52fdfc072182
spec:
  clusterIP: 172.30.229.139
  ports:
  - name: prometheus
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: syndesis
    syndesis.io/app: syndesis
    syndesis.io/component: syndesis-prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
